# SecurePay-Finance-Tracker-with-Payment--Gateway

SecurePay-Payment-Processing/: .gitattributes  .gitignore  CMakeLists.txt  README.md  class-diagram.md  design-principle-readme.md
SecurePay-Payment-Processing/src/: main.cpp
SecurePay-Payment-Processing/src/core/: appcontroller.cpp  appcontroller.h  bank.cpp  bank.h  cardtoken.cpp  cardtoken.h  customer.cpp  customer.h  datamanager.h  enhancedfraudsystem.cpp  enhancedfraudsystem.h  fraudalert.cpp  fraudalert.h  fraudsystem.cpp  fraudsystem.h  lazyreport.cpp  lazyreport.h  merchant.cpp  merchant.h  paymentgateway.cpp  paymentgateway.h  paymentgatewayfacade.cpp  paymentgatewayfacade.h  paymentmethod.cpp  paymentmethod.h  refund.cpp  refund.h  refundmanager.cpp  refundmanager.h  reportmanager.cpp  reportmanager.h  sqlitedatamanager.cpp  sqlitedatamanager.h  transaction.cpp  transaction.h  transactiondecorator.cpp  transactiondecorator.h
SecurePay-Payment-Processing/src/gui/: addcarddialog.cpp  addcarddialog.h  addcustomerdialog.cpp  addcustomerdialog.h  addmerchantdialog.cpp  addmerchantdialog.h  checkoutscreen.cpp  checkoutscreen.h  customerview.cpp  customerview.h  exportreportdialog.cpp  exportreportdialog.h  logindialog.cpp  logindialog.h  mainwindow.cpp  mainwindow.h  managecardsdialog.cpp  managecardsdialog.h  merchantview.cpp  merchantview.h  refunddialog.cpp  refunddialog.h
